--- a/src/assets/scss/common.scss
+++ b/src/assets/scss/common.scss
@@ -52,53 +52,114 @@
 	transition: all 0.5s ease;
 
 	& > .modal-content {
+		width: 500px;
+		height: 250px;
 		top: 10vh;
 		display: flex;
 		flex-direction: column;
 		position: relative;
 		background: linear-gradient(180deg, rgb(40, 20, 56) 0%, rgba(75,2,144,1) 100%);
 		margin: auto;
-		width: 500px;
-		height: 250px;
 		border-radius: 5px;
 		color: #ffffff;
+	}
 
-		& > .modal-title {
-			font-size: 1.25rem;
+	& > .modal-view-content {
+		@extend .modal-content;
+		width: 55%;
+		height: 80%;
+	}
+}
 
+.modal-title {
+	font-size: 1.25rem;
+}
+
+.modal-meta {
+	display: flex;
+
+	& > div {
+		flex: 1;
+	}
+}
+
+.modal-view-infos {
+	display: flex;
+	flex-direction: column;
+
+	& > div {
+		margin-left: 15px;
+		display: flex;
+
+		& > span {
+			margin: 2px 2px;
+			font-size: 0.75rem;
 		}
+	}
+}
 
-		& > .modal-inputs {
-			display: flex;
-			flex-direction: column;
-			align-items: center;
-			justify-content: space-evenly;
-			flex-grow: 1;
+.modal-self-option {
+	display: flex;
+	align-items: center;
+	justify-content: center;
 
-			& > .modal-input {
-				label {
-					margin-right: 0.6rem;
-				}
-			}
+	& > label {
+		margin-right: 10px;
+	}
+}
+
+.modal-view-desc {
+	height: 100%; 
+    display: flex;
+    flex-flow: column nowrap;
+    align-items: stretch;
+
+	& > div {
+		width: 95%;
+		height: 90%;
+		margin: auto;
+
+		& > textarea {
+			width: 100%;
+			height: 100%;
 		}
+	}
+}
 
-		& > .modal-options {
-			display: flex;
-			justify-content: space-evenly;
-			padding: 10px;
+.modal-inputs {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: space-evenly;
+	flex-grow: 1;
 
-			div {
-				padding: 8px 15px;
-				margin: 10px 0;
-
-				&:nth-child(1) {
-					@include basic-button(#d71e1e, #cb0930);
-				}
-				&:nth-child(2) {
-					@include basic-button(#2bff01, #4ce11a);
-				}
-			}
+	& > .modal-input {
+		label {
+			margin-right: 0.6rem;
 		}
+	}
+}
+
+.modal-options {
+	display: flex;
+	justify-content: space-evenly;
+	padding: 10px;
+
+	div {
+		padding: 8px 15px;
+		margin: 10px 0;
+	}
+
+	.edit-btn {
+		@include basic-button(#056785, #027d90);
+	}
+
+	.close-btn {
+		@include basic-button(#d71e1e, #cb0930);
+	}
+
+	.submit-btn {
+		@include basic-button(#2bff01, #4ce11a);
 	}
 }
 
